# hackweek_2022

./: README.md
api/: Cargo.toml  README.md
api/src/: main.rs
fib/: README.md
fib/src/: main.rs
hello/: readme.md
hello/src/: main.rs
user-manifest/: Cargo.toml
user-manifest/src/: main.rs
user-manifest/src/controller/: rbac_controller.rs  rbac_grant.rs
user-manifest/src/endpoints/: grants.rs  health.rs  permissions.rs
