[package]
name = "user-manifest"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = {version = "0.73.1", features = ["runtime"] }
k8s-openapi = { version = "0.15.0", features = ["v1_23"]}
actix-web = { version = "4.1.0" }
serde_json = "1.0.81"
futures = "0.3.21"